--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
 		"server-run": "node ./dist/server.js"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.13",
 		"@types/react": "^17.0.38",
 		"@types/react-dom": "^17.0.11",
+		"@types/ws": "^8.2.2",
+		"express": "^4.17.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.5.5",
 		"webpack": "^5.68.0",
-		"webpack-cli": "^4.9.2"
+		"webpack-cli": "^4.9.2",
+		"ws": "^8.4.2"
 	}
 }
