--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
 		"@types/express": "^4.17.13",
 		"@types/react": "^17.0.38",
 		"@types/react-dom": "^17.0.11",
-		"@types/ws": "^8.2.2",
 		"express": "^4.17.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"socket.io": "^4.4.1",
+		"socket.io-client": "^4.4.1",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.5.5",
 		"webpack": "^5.68.0",
-		"webpack-cli": "^4.9.2",
-		"ws": "^8.4.2"
+		"webpack-cli": "^4.9.2"
 	}
 }
