--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
 		"target": "es5",
 		"jsx": "react",
 		"allowJs": true,
-		"moduleResolution": "node"
+		"moduleResolution": "node",
+		"lib": ["es6", "dom"],
+		"noImplicitThis": true
 	}
 }
